--- a/hw3-pset.ipynb
+++ b/hw3-pset.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "48d785a2-d3f5-4c79-b8a0-98c7377bf886",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "id": "e8492466",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['question', 'choices', 'label'],\n",
+       "    num_rows: 10\n",
+       "})"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "truthfulqa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "35858989-7a9f-41ca-9135-057fba8cac7a",
    "metadata": {},
    "outputs": [
